--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>AKramer17 Web</title>
-        <link>
+        <link href="https://akramer17.github.io/">
     </head>
 
     <body>
